# p2p

./: .gitignore  README.md  pyproject.toml
data/: sample_text.txt
data/docs/: apple_india.txt  mumbai_tech.txt
pipelines/: demo_rag.yaml
src/prompt2pipes/: cli.py  generator.py  ir.py  runner.py  validator.py  visualize.py
src/prompt2pipes/templates/: ner.yaml  rag_bm25.yaml
tests/: test_ir.py
